Better value tracking, to support the greenwave powernode

--- a/templates/add.html
+++ b/templates/add.html
@@ -51,8 +51,7 @@ $(document).ready(function()
         location_id            = $("#locations").val();
         device_name         = $("input#name").val();
                     
-        device_data = {'valueids': valueids,
-                       'nodeid': ${node},
+        device_data = {'nodeid': ${node},
                        'pluginid': "${pluginid}",
                        'pluginguid': "${pluginguid}",
                        'location': location_id,
@@ -63,17 +62,14 @@ $(document).ready(function()
           url: '/zwave_added',
           data: json_encode(device_data),
                 success:    function(data) {
+                	               
                                 // Show operation was successful
-                                $("#message").html('<img height="16" width="16" align="left" class="message" src="/images/ok.png">Device \'' + device_name + '\' succesfully added to the database!');
+                                $("#message").html('<img height="16" width="16" align="left" class="message" src="/images/ok.png">Device \'' + device_name + '\' succesfully added to the database.!');
                                 $('#message').show('slow', function() {
                                 });
 
                                 // Reset form and clean out checkboxes
-                                $('#device_add')[0].reset();
-                                
-						        $("#values tr").each(function(){
-						            $(this).find('td:first').children(':first-child').attr('checked', false);
-						        });                                
+                                $('#device_add')[0].reset();                           
                             }
         });        
         
@@ -124,20 +120,7 @@ $(document).ready(function()
                                         % endfor
                                     </select>       
                                 </td>
-                            </tr>   
-                            <tr>
-                                <td class="Label">
-                                    <span class="requiredfield">*</span>
-                                    Device type: 
-                                </td>
-                                <td>
-                                    <select id="device_type">
-                                        <option value="default" selected>Please select a device type...</option>
-                                        <option value="switch_binary">Switch</option>
-                                        <option value="thermostat">Thermostat</option>
-                                    </select>       
-                                </td>
-                            </tr>                               
+                            </tr>                           
                         </tbody>                           
                     </table>
                 </form>
@@ -145,29 +128,6 @@ $(document).ready(function()
         </tr>
         <tr>
             <td class="body" style="font: 11px Tahoma,Verdana,Helvetica,sans-serif;">
-                Note: HouseAgent will automatically select the appropriate values based upon the device type for you.<br>
-                However, you still have the flexibility to select any other value of interest.<br>
-                These values will then be automatically updated and tracked in the devices overview.
-                <br><br>
-                <table id="values" class="InfoTable" cellspacing="0" cellpadding="0" border="0" width="40%">
-                    <tbody>
-                        <tr class="HeadTable">
-                            <td nowrap="" width="5%"></td>
-                            <td nowrap="" width="30%">Command Class</td>
-                            <td nowrap="" width="30%">Label</td>
-                            <td nowrap="" width="30%">Value</td>
-                        </tr>
-                        % for value, details in result.iteritems():
-                        <tr class="Row">
-                            <td><input type="checkbox" id=${value}></td>
-                            <td>${details["class"]}</td>
-                            <td>${details["label"]}</td>
-                            <td>${details["value"]} ${details["units"]}</td>
-                        </tr>
-                        % endfor
-                    </tbody>
-                </table>
-                <br>
                 <div id="message" class="message"></div>
                 <table class="PanelPlain" cellspacing="0" cellpadding="2" border="0" width="100%">
                     <tbody>
